1142182028	Bugfix: Startrohstoffe bei Besiedelung.
1142172831	Neue Versionsnummer: 1.0.0 beta 2
1142035317	Neue Versionsnummer: 1.0.0 beta 1
1142035294	Wichtige Fortschritte am Flottensystem.
1141576344	Anmeldung jetzt auch per GET möglich.
1140977668	Todo-Liste entfernt, soll jetzt über Bugtracker laufen (http://bugs.s-u-a.net).
1140360089	Änderung in der Bauzeitenberechnung.
1140208547	Das Flottensystem unterstützt jetzt die Auftragsarten Stationieren und Besiedeln.
1139155215	Erste Teile des neuen Flottensystems eingebaut.
1138465441	Bei voller Platte gehen jetzt keine Daten mehr verloren.
1138455336	Allianz-Highscores-Bug behoben.
1138412932	Bug im Roboterbau behoben.
1138412525	Neues Feature: Man kann bauende Roboter, Schiffe und Verteidigungsanlagen ohne Kostenrückerstattung abbrechen lassen, um zu lange Wartezeiten zu vermeiden.
1138411695	SSL in die „Planeten aufgeben“-Funktion eingebaut.
1138410318	Neue Versionsnummer: 1.0.0 pre-beta 1
1138410302	Komplette Neuprogrammierung der Spielengine, von außen betrachtet sind aber wenige Features hinzugekommen.
1136851793	Bei Nachrichten ist der Absender jetzt anklickbar, man gelangt zu dessen Benutzerbeschreibung.
1136851773	Bug behoben: Wurde globale Forschung wieder abgebrochen, nachdem die Reihenfolge der Planeten verändert wurde, bekam man die Rohstoffe unter Umständen auf dem falschen Planeten zurück.
1136220585	Bug in Bezug auf den Roboterhandel mit der Handelsfunktion behoben.
1136219129	Wenn man in der Handelsfunktion den Planeten wechselte, erhielt man eine leere Seite, die man nicht verlassen konnte.
1135609592	Beim Sammeln werden jetzt nur noch die Sammler mit Rohstoffen beladen.
1135541078	Neue Versionsnummer: 0.2.1
1135541058	Neues Feature: Handelsfunktion – man kann sich nähernden Transporten Rohstoffe mit auf den Rückweg geben.
1135254021	Neue Versionsnummer: 0.2.0
1135254020	Flexiblere Unterstützung für mehrere Runden (Datenbanken).