@@ -430,6 +430,10 @@ br.clear { clear:both; }
 
 .einstellungen-speichern-1 { display:none; }
 
+.bauende-gegenstaende table { border-spacing:0; border-collapse:collapse; text-align:center; }
+.bauende-gegenstaende td,.bauende-gegenstaende th { border:.1em solid #aaa; padding:.2em .3em; }
+.bauende-gegenstaende th { font-weight:bold; }
+
 #gesperrt-hinweis { font-size:1.2em; font-weight:bold; color:#f00; margin:0; padding:.5em; }
 
 .changelog { text-align:left; margin:.5em; padding:0; border-top:.1em solid #aaa; border-right:.1em solid #aaa; border-left:.1em solid #aaa; list-style-type:none; }
