@@ -1,3 +1,4 @@
+1142290406	Erweiterte Einstellungsmöglichkeiten zu bauenden Gegenständen in der Übersicht.
 1142182028	Bugfix: Startrohstoffe bei Besiedelung.
 1142172831	Neue Versionsnummer: 1.0.0 beta 2
 1142035317	Neue Versionsnummer: 1.0.0 beta 1
